--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
     "mongoose-unique-validator": "^3.1.0",
